<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/linearInsertCurrencyValueItemWrapper"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/blue_border_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relativeUpperItemWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearUpperItemWrapper"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:paddingTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/linearDropDownWrapper">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textYouSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tw_averta_bold"
                android:textColor="@color/transferWiseBlue"
                android:text="@string/recipient_will_get_exactly"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTargetValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/transferWiseBlack"
                android:fontFamily="@font/tw_averta_regular"
                android:textSize="20sp"
                android:text="@string/source_value"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDropDownWrapper"
            android:orientation="horizontal"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:background="@drawable/currency_blue_bg">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTargetCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:fontFamily="@font/tw_averta_bold"
                android:textColor="@color/transferWiseWhite"
                android:text="@string/gbp"
                android:layout_marginEnd="10dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageArrowDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_arrow_down_blue"/>
        </LinearLayout>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textCurrentBalance"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/tw_averta_bold"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:textColor="@color/transferWiseGrey"
        android:background="@drawable/rounded_textview_bg"
        android:text="@string/current_balance"/>
</LinearLayout>